[project]
name = "retirement-planner"
version = "0.1.0"
description = "Bayesian-primary retirement Monte Carlo simulator with EVT tail correction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = []
keywords = ["bayesian", "retirement", "monte-carlo", "finance", "mcmc"]

dependencies = [
    "arch>=8.0.0",
    "arviz>=0.23.4",
    "hmmlearn>=0.3.3",
    "matplotlib>=3.10.0",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "pandas-datareader>=0.10.0",
    "pymc>=5.28.0",
    "pytensor>=2.38.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.0",
    "yfinance>=1.3.0",
]

[project.scripts]
# Run as: uv run retirement-planner [args]
retirement-planner = "retirement_model:main"

[project.optional-dependencies]
# Uncomment when building Dash UI
# dash = [
#     "dash>=2.14.0",
#     "dash-bootstrap-components>=1.5.0",
#     "plotly>=5.18.0",
# ]

dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["flit_core>=3.2.0"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "retirement_model"

[tool.uv]
# Use uv.lock for exact reproducibility (commit this file)
# Docker: COPY uv.lock . && uv sync --frozen --no-dev

[tool.ruff]
line-length = 100
target-version = "py312"
